LegionDS batch script, item list, and copied .py scripts. Updated ignorelist as well

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,10 @@ target/
 
 # scripts
 bin/*
+/broker.yaml
+/Last_AH-tool_Stop.log
+/scrub.yaml
+/broker.log
+/bin/scrub.yaml
+/bin/broker.yaml
+/bin/scrub.log
